[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/DevConsole.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.172549, 0.172549, 0.556863 )

[node name="DevConsole" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="OutputArea" type="Control" parent="."]
margin_right = 1023.0
margin_bottom = 523.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="OutputArea"]
margin_top = 18.0
margin_right = 1020.0
margin_bottom = 597.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="VBoxContainer" parent="OutputArea/ScrollContainer"]

[node name="VBoxContainer" type="VBoxContainer" parent="OutputArea"]
margin_right = 80.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="OutputArea/VBoxContainer"]
margin_right = 80.0
margin_bottom = 14.0
text = "Dev Console"
align = 1
valign = 1

[node name="InputArea" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="InputArea"]
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="text_entered" from="InputArea/TextEdit" to="." method="_on_TextEdit_text_entered"]
